unpackaged/main/default/objects/Quote/fields/Additional_Quote_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Quote_Information__c</fullName>
    <label>Additional Quote Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>