unpackaged/main/default/objects/Quote/fields/On_line_payment_link__c.field-meta.xml
<CustomField>
    <fullName>On_line_payment_link__c</fullName>
    <label>On-line Payment Link</label>
    <type>Url</type>
</CustomField>