unpackaged/main/default/objects/Quote/fields/Pay_By_Check__c.field-meta.xml
<CustomField>
    <fullName>Pay_By_Check__c</fullName>
    <defaultValue>&quot;Print this invoice and send to&quot; &amp; BR() &amp; BR() &amp;
&quot;NCM Institute&quot; &amp; BR() &amp;
&quot;Attn: Accounts Payable&quot; &amp; BR() &amp;
&quot;10551 Barkley St Ste 200&quot; &amp; BR() &amp;
&quot;Overland Park, KS 66212&quot;</defaultValue>
    <description>Check payment address</description>
    <label>Pay By Check</label>
    <type>TextArea</type>
</CustomField>