unpackaged/main/default/objects/Quote/recordTypes/Education.recordType-meta.xml
<RecordType>
    <fullName>Education</fullName>
    <active>true</active>
    <label>Education</label>
</RecordType>